# prosia

./: .gitignore  Cargo.toml  Justfile  README.md  Trunk.toml  index.html  package-lock.json
be/: Cargo.toml  Justfile
be/src/: main.rs  peers.rs  room.rs  socket.rs  state.rs
fe/: Cargo.toml  Justfile  Trunk.toml  index.html  package-lock.json
fe/public/: styles.scss
fe/src/: lib.rs  socket.rs
fe/src/components/: format_header.rs
fe/src/components/icon/: mod.rs
fe/src/format/: element.rs  mod.rs
js/: relay.js
js/backend/: README.md  package-lock.json  package.json  server.js
js/backend/document/: doc.js  manager.js  schema.js
js/frontend/: README.md  package-lock.json  package.json
js/frontend/public/: index.html
js/frontend/src/: App.css  App.js  App2.js  doc.js  index.js
js/frontend/src/components/: paginatedEditor.js  pagination.js  toolbar.js
js/frontend/src/document/: client.js
js/frontend/src/editor/: ProseMirrorEditor.js  schema.js
prosemirror-collab-app/: README.md
prosemirror-collab-app/backend/: DocumentManager.js  package-lock.json  package.json  server.js
prosemirror-collab-app/backend/prosemirror/: doc.js  schema.js
prosemirror-collab-app/frontend/: package-lock.json  package.json
prosemirror-collab-app/frontend/src/: App.css  App.js  LinkTooltip.js  Menu.js  doc.js
prosemirror-collab-app/frontend/src/collaboration/: client.js  cursorPlugin.js
prosemirror-collab-app/frontend/src/components/: paginatedEditor.js
prosemirror-collab-app/frontend/src/editor/: schema.js
public/: styles.scss
shared/: Cargo.toml
shared/src/: server.rs
src/: lib.rs  main.rs  socket.rs
src/components/: format_header.rs  mod.rs
src/format/: element.rs  mod.rs
