[package]
name = "scriptpad"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
leptos_icons = "0.7.0"
icondata_core = "0.1.0"
icondata = "0.6.0"
leptos_workers = "0.3.0"
uuid = { version = "1.18.0", features = [
    "js",
    "serde",
    "v4",
], default-features = true }
leptos-use = "0.16.2"
dashmap = "6.1.0"
futures = "0.3.31"
yrs = { version = "0.24.0" }


# server
codee = "0.3.2"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
